--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,131 @@
-body {
-	background-color: blue;
+%segment {
+	border-left: 32.35px solid transparent;
+	border-right: 32.35px solid transparent;
+	width: 0;
+	height: 0;
+	border-top-right-radius: 100%5px;
+	border-top-left-radius: 100%5px;
+	margin-left: (250px-32.35px);
+	margin-top: 0;
+	position: fixed;
+	transform-origin: 50% 100%;
+	z-index: 1;
 }
+
+@mixin segment_style($color, $bColor, $rotation) {
+	color: $color;
+	border-top: 250px solid $bColor;
+	transform: rotate($rotation);
+}
+
+$rot: 15deg;
+
+body {
+	background-color: darkgreen;
+}
+
+.wheelContainer {
+	width:500px;
+	height:500px;
+	background-color: transparent;
+	position:relative;
+	z-index: 0;
+	animation: rotation 6s cubic-bezier(0.25, 0.98, 0.54, 1) forwards;
+
+	.seg {
+		@extend %segment
+	}
+	.wheelSeg1 {
+		@include segment_style(black, lightblue, 0 * $rot)
+	}
+	.wheelSeg2 {
+		@include segment_style(black, orange, 1 * $rot)
+	}
+	.wheelSeg3 {
+		@include segment_style(black, white, 2 * $rot)
+	}
+	.wheelSeg4 {
+		@include segment_style(black, red, 3 * $rot)
+	}
+	.wheelSeg5 {
+		@include segment_style(black, lightgreen, 4 * $rot)
+	}
+	.wheelSeg6 {
+		@include segment_style(white, black, 5 * $rot)
+	}
+	.wheelSeg7 {
+		@include segment_style(black, yellow, 6 * $rot)
+	}
+	.wheelSeg8 {
+		@include segment_style(black, orange, 7 * $rot)
+	}
+	.wheelSeg9 {
+		@include segment_style(black, lightblue, 8 * $rot)
+	}
+	.wheelSeg10 {
+		@include segment_style(black, lightgreen, 9 * $rot)
+	}
+	.wheelSeg11 {
+		@include segment_style(black, purple, 10 * $rot)
+	}
+	.wheelSeg12 {
+		@include segment_style(black, yellow, 11 * $rot)
+	}
+	.wheelSeg13 {
+		@include segment_style(black, lightblue, 12 * $rot)
+	}
+	.wheelSeg14 {
+		@include segment_style(black, white, 13 * $rot)
+	}
+	.wheelSeg15 {
+		@include segment_style(black, red, 14 * $rot)
+	}
+	.wheelSeg16 {
+		@include segment_style(black, lightgreen, 15 * $rot)
+	}
+	.wheelSeg17 {
+		@include segment_style(black, purple, 16 * $rot)
+	}
+	.wheelSeg18 {
+		@include segment_style(black, orange, 17 * $rot)
+	}
+	.wheelSeg19 {
+		@include segment_style(black, white, 18 * $rot)
+	}
+	.wheelSeg20 {
+		@include segment_style(black, pink, 19 * $rot)
+	}
+	.wheelSeg21 {
+		@include segment_style(black, grey, 20 * $rot)
+	}
+	.wheelSeg22 {
+		@include segment_style(black, red, 21 * $rot)
+	}
+	.wheelSeg23 {
+		@include segment_style(black, yellow, 22 * $rot)
+	}
+	.wheelSeg24 {
+		@include segment_style(black, grey, 23 * $rot)
+	}
+
+	
+}
+
+@keyframes rotation {
+	0%{
+		transform: rotate(0deg);
+	}
+	15%{
+		transform: rotate(-50deg);
+	}
+
+	100%{
+		transform: rotate(700deg);
+	}
+}
+
+
+
+
+
+
