Edited some components of the game answer display. More of it may need to be done in Javascript than I originally hoped, but it's possible that I could have one image overlay another which would make the whole algorithm much simpler.

--- a/wordGrid.css
+++ b/wordGrid.css
@@ -1,5 +1,5 @@
 .letterBoxContainer {
-  display: inline-flex;
+  display: inlineflex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
