--- a/wordGrid.scss
+++ b/wordGrid.scss
@@ -32,25 +32,28 @@
 	width: 630px;
 	padding: 0;
 	background-color: red;
-	top: 20%;
-	right: 10%;
+	top: 15%;
+	right: 5%;
 	position: absolute;
 	clear: left;
 
 	.words {
 		@extend %letterBox;
 
-		&--joining {
-			@include wordBox(7)
-		}
 		&--a {
 			@include wordBox(1)
 		}
-		&--book {
+		&--package {
+			@include wordBox(7)
+		}
+		&--in  {
+			@include wordBox(2)
+		}
+		&--your {
 			@include wordBox(4)
 		}
-		&--club {
-			@include wordBox(4)
+		&--mailbox {
+			@include wordBox(7)
 		}
 	}
 	.blankBox {
@@ -61,10 +64,12 @@
 	position: relative;
 	border-color: black;
 	border-width: 1px;
+	border-style: solid;
 	
 	
 	}.corner {
 	background-color: darkgreen;
+	border-style: none;
 }
 
 
