--- a/wordGrid.scss
+++ b/wordGrid.scss
@@ -1,27 +1,44 @@
 
+.corner {
+	background-color: darkgreen !important;
+	border: none !important;
+}
 
-%letterBox {
-	display: block;
+.blankBox {
+		display: inline-block;
+		height: 60px;
+		width: 45px;
+		background-color: green;
+		position: relative;
+		border-color: black;
+		border-width: 1px;
+		border-style: solid;
+}
+
+.letter {
+	display: inline-block;
 	height: 60px;
+	width: 45px;
 	font-size: 30px;
 	font-weight: bolder;
 	background-color: white;
 	text-align: center;
-	white-space: pre;
 	position: relative;
-	
-}
-.corner {
-	background-color: darkgreen;
+	margin: none;
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
 }
 
+#gameBoard {
+	display: block;
+	margin: none;
+}
 
 .letterBoxContainer {
 	list-style: none;
 	display: inline-flex;
 	flex-wrap: wrap;
-	justify-content: center;
-	align-content: center;
 	height: 240px;
 	width: 630px;
 	padding: 0;
@@ -31,33 +48,35 @@
 	position: absolute;
 	clear: left;
 
-	.letter {
-		@extend %letterBox;
-	}
-	
-	.beginning {
-		flex: 1;
-	}
+		.beginning {
+			flex: -1;
+			@extend .blankBox;
+		}
 
-	.blankBox {
-	display: inline-block;
-	height: 60px;
-	width: 45px;
-	background-color: green;
-	position: relative;
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	}
-	
-	.corner {
-	background-color: darkgreen;
-	border-style: none;
-	}
+		.padA{
+			@extend .blankBox;
+		}
+		.line1 {
+			@extend .letter;
+		}
+		
+		.padB {
+			@extend .blankBox;
+		}
+		.line2 {
+			@extend .letter;
+		}
 
-	.end {
-		flex: 50;
-	}
+		.padC{
+			@extend .blankBox;
+		}
+
+		.end {
+			flex: 50;
+			@extend .blankBox;
+		}
+	
+
 
 }
 
