--- a/wordGrid.css
+++ b/wordGrid.css
@@ -10,21 +10,25 @@
   position: relative;
   border-color: black;
   border-width: 1px;
-  border-style: solid; }
+  border-style: solid;
+  margin: none; }
 
 .letter, .letterBoxContainer .line1, .letterBoxContainer .line2 {
   display: inline-block;
   height: 60px;
   width: 45px;
-  font-size: 30px;
-  font-weight: bolder;
+  font-size: 45px;
   background-color: white;
+  background: white;
   text-align: center;
   position: relative;
   margin: none;
   border-width: 1px;
   border-color: black;
-  border-style: solid; }
+  border-style: solid;
+  vertical-align: bottom;
+  transform: rotateY(180deg);
+  opacity: 0; }
 
 #gameBoard {
   display: block;
