The wheel values and the displayed values now match up. All of the core functionality of the program works as far as I can tell. The only step now is to make it into an actual game.

--- a/wordGrid.css
+++ b/wordGrid.css
@@ -96,7 +96,7 @@
   border-color: yellow;
   border-width: 3px;
   border-style: solid;
-  color: yellow;
+  color: darkblue;
   text-align: center; }
 
 #player1total {
@@ -138,7 +138,7 @@
   border-color: yellow;
   border-width: 3px;
   border-style: solid;
-  color: yellow;
+  color: orange;
   text-align: center; }
 
 /*# sourceMappingURL=wordGrid.css.map */
