--- a/wordGrid.scss
+++ b/wordGrid.scss
@@ -142,7 +142,7 @@
 	border-color: yellow;
 	border-width: 3px;
 	border-style: solid;
-	color: yellow;
+	color: darkblue;
 	text-align: center;
 }
 
@@ -188,6 +188,6 @@
 	border-color: yellow;
 	border-width: 3px;
 	border-style: solid;
-	color: yellow;
+	color: orange;
 	text-align: center;
 }
