--- a/wordGrid.scss
+++ b/wordGrid.scss
@@ -126,27 +126,31 @@
 }
 
 .puzzleSolve {
-	margin-left: 100px;
-	margin-top: 50px;
+	position: absolute;
 	color: maroon;
+	left: 50%;
+	bottom: 23%;
 }
 
 #wheelvalue {
 	display: block;
 	height: 100px;
 	width: 350px;
-	background-color: lightgreen;
+	background-color: green;
 	position: absolute;
 	top: 51%;
 	left: 40%;
 	border-color: yellow;
 	border-width: 3px;
 	border-style: solid;
-	color: darkblue;
+	color: yellow;
 	text-align: center;
 }
+.turn {
+	border-color: red !important;
+}
 
-#player1total {
+#player1totalc {
 	display: block;
 	height: 100px;
 	width: 300px;
@@ -159,10 +163,10 @@
 	border-style: solid;
 	color: yellow;
 	text-align: center;
-
+	
 }
 
-#player2total {
+#player2totalc {
 	display: block;
 	height: 100px;
 	width: 300px;
@@ -175,19 +179,20 @@
 	border-style: solid;
 	color: yellow;
 	text-align: center;
+	
 }
 
 #gameType {
 	display: block;
 	height: 100px;
 	width: 350px;
-	background-color: lightgreen;
+	background-color: green;
 	position: absolute;
 	top: 51%;
 	right: 5%;
 	border-color: yellow;
 	border-width: 3px;
 	border-style: solid;
-	color: orange;
+	color: yellow;
 	text-align: center;
 }
